Refactoring order domain layer: updating order approval saga